@@ -23,11 +23,14 @@
  * @summary Test the intrinsic implementation of Object.hashCode with vtable guard
  * @requires os.arch=="amd64" | os.arch=="x86_64" | os.arch=="aarch64"
  * @library /test/lib /
+ * @modules java.base/jdk.internal.misc
+ * @compile TestHashCodeInterface.jasm TestHashCode.java
  * @run main/othervm compiler.jeandle.intrinsic.TestHashCode
  */
 
 package compiler.jeandle.intrinsic;
 
+import java.lang.reflect.Field;
 import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.List;
@@ -36,44 +39,86 @@ import java.util.regex.Pattern;
 
 import compiler.jeandle.fileCheck.FileCheck;
 
+import jdk.internal.misc.Unsafe;
 import jdk.test.lib.Asserts;
 import jdk.test.lib.process.OutputAnalyzer;
 import jdk.test.lib.process.ProcessTools;
 
 public class TestHashCode {
 
+    private static final int[] LOCKING_MODES = {0, 1, 2};
+
     // Per-call-site log line emitted by Jeandle when Object.hashCode is recognized.
     private static final String INTRINSIC_LOG_LINE =
         "Method `virtual jint java.lang.Object.hashCode()` is parsed as intrinsic";
 
     public static void main(String[] args) throws Exception {
-        String dumpPath = Files.createTempDirectory("jeandle_hashcode").toString();
+        for (int lockingMode : LOCKING_MODES) {
+            String dumpPath = Files.createTempDirectory(
+                    "jeandle_hashcode_mode_" + lockingMode).toString();
+            OutputAnalyzer output = runChild(dumpPath, lockingMode, true);
+            output.shouldHaveExitValue(0);
+            Asserts.assertEQ(countIntrinsicLogs(output), 3,
+                    "Expected hashOf, TestHashCodeInterface.hash, and "
+                    + "SpecialHash.hashFromSuper to intrinsify "
+                    + "with LockingMode=" + lockingMode);
 
+            if (lockingMode == 2) {
+                checkEnabledIR(dumpPath);
+            }
+        }
+
+        String disabledDumpPath = Files.createTempDirectory(
+                "jeandle_hashcode_disabled").toString();
+        OutputAnalyzer disabled = runChild(disabledDumpPath, 2, false);
+        disabled.shouldHaveExitValue(0);
+        Asserts.assertEQ(countIntrinsicLogs(disabled), 0,
+                "Disabled _hashCode must use normal invoke handling");
+
+        FileCheck disabledIR = new FileCheck(disabledDumpPath,
+                TestWrapper.class.getDeclaredMethod("hashOf", Object.class), false);
+        disabledIR.checkNotPattern("call hotspotcc i32 @jeandle\\.hashcode_fast");
+        disabledIR.checkPattern("__jeandle_dynamic_call");
+    }
+
+    private static OutputAnalyzer runChild(String dumpPath, int lockingMode,
+                                           boolean enableIntrinsic) throws Exception {
         ArrayList<String> commandArgs = new ArrayList<>(List.of(
                 "-Xbatch",
                 "-XX:-TieredCompilation",
                 "-XX:+UseJeandleCompiler",
                 "-Xcomp",
+                "-XX:+UnlockDiagnosticVMOptions",
+                "-XX:+UnlockExperimentalVMOptions",
+                "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
+                "-XX:LockingMode=" + lockingMode,
                 "-Xlog:jeandle=debug",
                 "-XX:+JeandleDumpIR",
                 "-XX:JeandleDumpDirectory=" + dumpPath,
                 "-XX:CompileCommand=compileonly," + TestWrapper.class.getName() + "::hashOf",
+                "-XX:CompileCommand=compileonly," + TestHashCodeInterface.class.getName() + "::hash",
+                "-XX:CompileCommand=compileonly," + SpecialHash.class.getName() + "::hashFromSuper",
                 TestWrapper.class.getName()));
+        if (!enableIntrinsic) {
+            commandArgs.add(commandArgs.size() - 1,
+                    "-XX:ControlIntrinsic=-_hashCode");
+        }
+        commandArgs.add(Boolean.toString(enableIntrinsic));
 
         ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder(commandArgs);
-        OutputAnalyzer output = ProcessTools.executeCommand(pb);
+        return ProcessTools.executeCommand(pb);
+    }
 
-        output.shouldHaveExitValue(0);
-
-        // hashOf is intrinsified on first compilation. The vtable guard's slow
-        // path is now a Java call (matching C2), not uncommon_trap — so no CHA
-        // deopt/recompile cycle. Exactly 1 intrinsic-log entry expected.
+    private static int countIntrinsicLogs(OutputAnalyzer output) {
         Matcher m = Pattern.compile(Pattern.quote(INTRINSIC_LOG_LINE)).matcher(output.getOutput());
         int intrinsicCount = 0;
-        while (m.find()) intrinsicCount++;
-        Asserts.assertEQ(intrinsicCount, 1,
-            "Expected exactly 1 intrinsic-log entry for hashOf, got " + intrinsicCount);
+        while (m.find()) {
+            intrinsicCount++;
+        }
+        return intrinsicCount;
+    }
 
+    private static void checkEnabledIR(String dumpPath) throws Exception {
         // Verify the IR contains: vtable guard + fast path + Java-call slow path + merge.
         FileCheck fc = new FileCheck(dumpPath,
                 TestWrapper.class.getDeclaredMethod("hashOf", Object.class),
@@ -86,10 +131,35 @@ public class TestHashCode {
         fc.checkPattern("call hotspotcc i32 @jeandle\\.hashcode_fast");
         // Slow path block — a Java call to Object.hashCode, NOT uncommon_trap.
         fc.checkPattern("hashCode_slow_call");
-        fc.checkPattern("@\"java_lang_Object_hashCode\\(\\)I\"");
+        fc.checkPattern("@\"__jeandle_dynamic_call\\.java_lang_Object_hashCode\\(\\)I\"");
         // Merge block + result PHI.
         fc.checkPattern("hashCode_merge");
         fc.checkPattern("hashCode.result");
+
+        FileCheck special = new FileCheck(dumpPath,
+                SpecialHash.class.getDeclaredMethod("hashFromSuper"), false);
+        special.checkNotPattern("hashCode\\.methods_match");
+        special.checkPattern("call hotspotcc i32 @jeandle\\.hashcode_fast");
+        special.checkPattern("@\"java_lang_Object_hashCode\\(\\)I\"");
+        special.checkNotPattern("__jeandle_dynamic_call");
+
+        FileCheck interfaceCall = new FileCheck(dumpPath,
+                TestHashCodeInterface.class.getDeclaredMethod("hash", EmptyInterface.class), false);
+        interfaceCall.checkPattern("@jeandle\\.check_instanceof\\(ptr inttoptr");
+        FileCheck interfaceVtable = new FileCheck(dumpPath,
+                TestHashCodeInterface.class.getDeclaredMethod("hash", EmptyInterface.class), false);
+        interfaceVtable.checkPattern("hashCode\\.methods_match");
+        FileCheck interfaceFast = new FileCheck(dumpPath,
+                TestHashCodeInterface.class.getDeclaredMethod("hash", EmptyInterface.class), false);
+        interfaceFast.checkPattern("call hotspotcc i32 @jeandle\\.hashcode_fast");
+        FileCheck interfaceSlow = new FileCheck(dumpPath,
+                TestHashCodeInterface.class.getDeclaredMethod("hash", EmptyInterface.class), false);
+        interfaceSlow.checkPattern("__jeandle_dynamic_call");
+        FileCheck interfaceDeopt = new FileCheck(dumpPath,
+                TestHashCodeInterface.class.getDeclaredMethod("hash", EmptyInterface.class), false);
+        interfaceDeopt.checkPattern("^hashCode\\.interface_check_fail:");
+        interfaceDeopt.checkPattern(
+                "llvm\\.experimental\\.deoptimize.*\\[ \\\"deopt\\\"\\(.*ptr addrspace\\(1\\) %0");
     }
 
     // TestWrapper exercises all four combinations of:
@@ -97,6 +167,8 @@ public class TestHashCode {
     //   (b) fast path succeeds?                 → drives fast/slow selection
     static class TestWrapper {
         public static void main(String[] args) {
+            boolean enableIntrinsic = Boolean.parseBoolean(args[0]);
+
             // Prime CP resolution for Object.hashCode so the first compilation
             // of hashOf avoids Jeandle's Reason_unloaded deopt at the invokevirtual.
             int preload = new Object().hashCode();
@@ -150,6 +222,49 @@ public class TestHashCode {
                     + overrideResult + " != 42");
             }
 
+            // === Scenario 5: override exceptions retain the Java exception edge ===
+            try {
+                hashOf(new ThrowingHash());
+                throw new RuntimeException("scenario 5: expected HashCodeException");
+            } catch (HashCodeException expectedException) {
+                // Expected.
+            }
+
+            // === Scenario 6: invokeinterface preserves dispatch and ICCE ===
+            PlainHashable plain = new PlainHashable();
+            int plainExpected = System.identityHashCode(plain);
+            Asserts.assertEquals(plainExpected, TestHashCodeInterface.hash(plain));
+            Asserts.assertEquals(73, TestHashCodeInterface.hash(new InterfaceOverride()));
+            if (enableIntrinsic) {
+                try {
+                    TestHashCodeInterface.hash(forgeEmptyInterface(new Object()));
+                    throw new RuntimeException("scenario 6: expected ICCE");
+                } catch (IncompatibleClassChangeError expectedException) {
+                    // Expected.
+                }
+                try {
+                    TestHashCodeInterface.hash(
+                            forgeEmptyInterface(new NonImplementingOverride()));
+                    throw new RuntimeException("scenario 6: expected ICCE for override");
+                } catch (IncompatibleClassChangeError expectedException) {
+                    // Expected.
+                }
+            }
+
+            // === Scenario 7: invokespecial has an exact Object.hashCode target ===
+            SpecialHash special = new SpecialHash();
+            int specialExpected = System.identityHashCode(special);
+            Asserts.assertEquals(specialExpected, special.hashFromSuper());
+            Asserts.assertEquals(99, special.hashCode());
+
+            // === Scenario 8: null receiver throws before intrinsic lowering ===
+            try {
+                hashOf(null);
+                throw new RuntimeException("scenario 8: expected NullPointerException");
+            } catch (NullPointerException expectedException) {
+                // Expected.
+            }
+
             System.out.println("TestHashCode PASSED");
         }
 
@@ -164,6 +279,62 @@ public class TestHashCode {
             public int hashCode() {
                 return 42;
             }
+        }
+
+        static class ThrowingHash {
+            @Override
+            public int hashCode() {
+                throw new HashCodeException();
+            }
+        }
+    }
+
+    interface EmptyInterface {
+    }
+
+    static class PlainHashable implements EmptyInterface {
+    }
+
+    static class InterfaceOverride implements EmptyInterface {
+        @Override
+        public int hashCode() {
+            return 73;
+        }
+    }
+
+    static class NonImplementingOverride {
+        @Override
+        public int hashCode() {
+            return 81;
+        }
+    }
+
+    static class SpecialHash {
+        int hashFromSuper() {
+            return super.hashCode();
+        }
+
+        @Override
+        public int hashCode() {
+            return 99;
+        }
+    }
+
+    static class HashCodeException extends RuntimeException {
+    }
+
+    private static final Unsafe UNSAFE = Unsafe.getUnsafe();
+    private static EmptyInterface forgedReceiver;
+
+    static EmptyInterface forgeEmptyInterface(Object obj) {
+        try {
+            Field field = TestHashCode.class.getDeclaredField("forgedReceiver");
+            Object base = UNSAFE.staticFieldBase(field);
+            long offset = UNSAFE.staticFieldOffset(field);
+            UNSAFE.putReference(base, offset, obj);
+            return forgedReceiver;
+        } catch (ReflectiveOperationException exception) {
+            throw new Error(exception);
         }
     }
 }
